--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Just Do It</title>
-    <link rel="stylesheet" href="public/style.css">
+    <title>TO DO LIST</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+
 </body>
 </html>
