--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,13 @@
 <%- include("header") -%>
 <div class="box1" id="heading">
-    <h1>Today</h1>
+    <h1>Just Do It</h1>
 </div>
 <div class="box">
 
 <% for(var i=0;i<newListItem.length;i++) { %>
 <form action="/delete" method="post">
      <div class="item">
-        <div class="round">
+        <div>
         <input type="checkbox" name="checkbox" value="<%= newListItem[i]._id%>"  onChange="this.form.submit()" id="checkbox">
         <label for="checkbox"></label>
         </div>
